# poc-honeycomb-gpu

./: .gitignore  Cargo.toml  Dockerfile  build.rs
src/: dim2.rs  dim3.rs  grid.cu  lib.rs  main.rs
src/cuda/includes/: honeycomb.h
src/cuda/kernels/: grid.cu
