[package]
name = "poc-honeycomb-gpu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mapgen"
path = "src/main.rs"

# [lib]
# path = "src/lib.rs"

[dependencies]
cudarc = { version = "0.12.1", features = ["cuda-12060"] }
honeycomb = { git = "https://github.com/LIHPC-Computational-Geometry/honeycomb",  tag = "0.10.0"}
rayon = "1.10.0"

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.82"
regex = "1.9.3"

